--- a/scss/_containers.scss
+++ b/scss/_containers.scss
@@ -21,7 +21,7 @@ body {
       .main-content {
         display: flex;
         flex-direction: column;
-        padding: 4.8rem 0;
+        padding: 0 0 4.8rem 0;
       }
     }
     &#footer_container {
